<resources>
    <string name="app_name">Github User</string>
    <string name="splash_description">Github Profile App by Aldo Saputra</string>
    <string name="username">Username</string>
    <string name="nama_user">Nama User</string>
    <string name="_200">200</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="search_hint">Search Username</string>
    <string name="followers_tab">Followers</string>
    <string name="following_tab">Following</string>
    <string name="_0">0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">id</string>
    <string name="location">Location</string>
    <string name="link">Link</string>
    <string name="image_view_user">Image View User</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="github">Github</string>
    <string name="you_don_t_have_favorite_user">You don\'t have Favorite User</string>
    <string name="desc_notfound">ImageView not Found</string>
    <string name="button_back">Button Back</string>
    <string name="image_not_found">Image not found</string>
    <string name="users_not_found">Users Not found</string>
    <string name="desc_tab">Descritpion</string>
    <string name="no_followers">This user have no followers</string>
    <string name="no_following">This user have no Following</string>
    <string name="detail_users">Detail Users</string>
</resources>