<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/btn_share"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_share"
        android:layout_marginTop="15dp"/>

    <CheckBox
        android:id="@+id/btn_fav"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:button="@drawable/ic_fav"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivUser"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:src="@tools:sample/avatars"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivUser"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppinssembold"
        android:gravity="center"
        android:text="@string/nama_user"
        android:textColor="@color/black"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/tvUsernameValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvName"
        android:text="@string/username"
        android:gravity="center"
        android:fontFamily="@font/poppinsreg"
        />

    <TextView
        android:id="@+id/tvFollowersValue"
        android:layout_width="60dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUsernameValue"
        android:text="@string/_200"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginStart="55dp"/>

    <TextView
        android:id="@+id/tvFollowingValue"
        android:layout_width="60dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUsernameValue"
        android:text="@string/_200"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tvRepositoryValue"
        android:layout_width="60dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUsernameValue"
        android:text="@string/_200"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginEnd="55dp"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/tvViewFollowers"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFollowersValue"
        android:text="@string/followers"
        android:layout_marginStart="55dp"/>

    <TextView
        android:id="@+id/tvViewFollowing"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFollowersValue"
        android:text="@string/following"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tvViewRepository"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFollowersValue"
        android:text="@string/repository"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="48dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        />

</RelativeLayout>